--- a/index.html
+++ b/index.html
@@ -5,6 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My portfolio details</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <section class="top-banner">
+      <div class="half1">
+        <h1>Welcome to</h1>
+        <h1><span class="color">MD. ARIFUZZAMAN</span> World!</h1>
+        <h2><u>Short description about myself</u></h2>
+        <h3>My family issue</h3>
+        <p>
+          This is MD. ARIFUZZAMAN.I am Bangladeshi.My home town is Rangpur.I
+          have one sister and one brother.My father and mother are alive. I have
+          two maternal uncle and one aunti. My gradpa and grandma are most
+          important person to me. After all, all the members are modest,helpful,
+          honest and peace of mind. I am very happy and lucky to get them in my
+          life.
+        </p>
+        <h3>My educational information</h3>
+        <p>
+          I am at 26 years old now. I have completed my SSC in 2013 and also
+          completed HSC in 2015.Now,I am studying B.SC in CSE, final year at
+          Hajee Mohammad Danesh Science and technology University, Dinajpur.I am
+          staying here last 5 years and passed the times with great fun and
+          learning process.My campus is small but well decorated.I feel proud to
+          be a part of my campus.I am always grateful to my creator(Allah
+          Subhanahu Tayala) . I also thanks to my family members whose
+          contribution is really unforgetable. I am realy lucky. I always try to
+          lead my life with simple way and also try to help others with my level
+          best.
+        </p>
+        <a
+          class="link-button"
+          href="https://github.com/MdArifuzzaman2/my-second-repo"
+          target="_blank"
+          >Hire me</a
+        >
+      </div>
+      <div class="half2">
+        <img
+          width="750"
+          height="450"
+          src="photos/portfoliopic.png"
+          alt="This is my professional picture"
+        />
+      </div>
+    </section>
+  </body>
 </html>
