added new section

--- a/index.html
+++ b/index.html
@@ -57,5 +57,28 @@
         />
       </div>
     </section>
+    <section class="dream-bg">
+      <div class="half1">
+        <img width="750" height="450" src="photos/port.png" alt="An image" />
+      </div>
+      <div class="half2">
+        <h1>My big dream</h1>
+        <h2 class="change-color">Everyone should have an excellent dream</h2>
+        <p>
+          I am a human being. I want to lead my life with positive mindset and
+          honest way. Dream / Goal / Target / Mission is an impotant fact for
+          every single person.<b class="dream">Do you know what is my dream?</b>
+          I want to be a full-stack web developer and I will be successful in my
+          mission insha-allah. YES, This is my dream to be a perfect web
+          programming developer.....
+        </p>
+        <a
+          class="link-button1"
+          href="https://github.com/MdArifuzzaman2/developer-arif-portfolio"
+          target="_blank"
+          >Download Resume</a
+        >
+      </div>
+    </section>
   </body>
 </html>
