--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
       <div class="half1">
         <h1>Welcome to</h1>
         <h1><span class="color">MD. ARIFUZZAMAN</span> World!</h1>
@@ -57,7 +57,7 @@
         />
       </div>
     </section>
-    <section class="dream-bg">
+    <section class="dream-bg flexible-container">
       <div class="half1">
         <img width="750" height="450" src="photos/port.png" alt="An image" />
       </div>
@@ -78,6 +78,42 @@
           target="_blank"
           >Download Resume</a
         >
+      </div>
+    </section>
+    <section class="exp top-banner">
+      <h1>Experiences</h1>
+      <div class="flexible-container">
+        <div class="margin-padding">
+          <h1>full-stack developer</h1>
+          <h2>2022-present | Pro level developer</h2>
+          <p>
+            For full-stack development, I have known about HTML,
+            CSS,JS,React-js, Bootstrap, node-js as backend, express-js also.This
+            is my passion. I like coding. I like web. This makes me so happy. I
+            love it . I enjoy this . This carrier is awesome and mind-blowing.
+          </p>
+        </div>
+        <div class="margin-padding1">
+          <h1>backend developer</h1>
+          <h2>20-22| middle level</h2>
+
+          <p>
+            Backend development is a part of web development sector. For this
+            purpose, I have known and learnt about basic HTML,CSS,Bootstrap, JS
+            as backend. This is popular . Most of the people are interested in
+            this sector.Marketplace is available for backend developer.
+          </p>
+        </div>
+        <div class="margin-padding2">
+          <h1>fronend developer</h1>
+          <h2>19-20 | basic level</h2>
+          <p>
+            Frontend developer are famous in this world . Every marketplace and
+            renound company are available for Frontend developer. For this
+            purpose, I have to know HTML, CSS, JS, JS-framework, Bootstrap, Git,
+            Github etc.....
+          </p>
+        </div>
       </div>
     </section>
   </body>
