--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class="half1">
         <h1>Welcome to</h1>
         <h1><span class="color">MD. ARIFUZZAMAN</span> World!</h1>
-        <h2><u>Short description about myself</u></h2>
+        <h2 class="heading">Short description about myself</h2>
         <h3>My family issue</h3>
         <p>
           This is MD. ARIFUZZAMAN.I am Bangladeshi.My home town is Rangpur.I
@@ -84,7 +84,7 @@
       <div class="flexible-container">
         <div class="margin-padding">
           <h1>full-stack developer</h1>
-          <h2>2022-present | Pro level developer</h2>
+          <h2 class="heading1">2022-present | Pro level developer</h2>
           <p>
             For full-stack development, I have known about HTML,
             CSS,JS,React-js, Bootstrap, node-js as backend, express-js also.This
@@ -94,7 +94,7 @@
         </div>
         <div class="margin-padding1">
           <h1>backend developer</h1>
-          <h2>20-22| middle level</h2>
+          <h2 class="heading1">20-22| middle level</h2>
 
           <p>
             Backend development is a part of web development sector. For this
@@ -105,7 +105,7 @@
         </div>
         <div class="margin-padding2">
           <h1>fronend developer</h1>
-          <h2>19-20 | basic level</h2>
+          <h2 class="heading1">19-20 | basic level</h2>
           <p>
             Frontend developer are famous in this world . Every marketplace and
             renound company are available for Frontend developer. For this
