my portfolio is ready

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <section class="exp top-banner">
       <h1>Experiences</h1>
       <div class="flexible-container">
-        <div class="margin-padding">
+        <div id="full-stack-developer" class="margin-padding">
           <h1>full-stack developer</h1>
           <h2 class="heading1">2022-present | Pro level developer</h2>
           <p>
@@ -92,7 +92,7 @@
             love it . I enjoy this . This carrier is awesome and mind-blowing.
           </p>
         </div>
-        <div class="margin-padding1">
+        <div id="backend-developer" class="margin-padding">
           <h1>backend developer</h1>
           <h2 class="heading1">20-22| middle level</h2>
 
@@ -103,8 +103,8 @@
             this sector.Marketplace is available for backend developer.
           </p>
         </div>
-        <div class="margin-padding2">
-          <h1>fronend developer</h1>
+        <div id="frontend-developer" class="margin-padding">
+          <h1>frontend developer</h1>
           <h2 class="heading1">19-20 | basic level</h2>
           <p>
             Frontend developer are famous in this world . Every marketplace and
@@ -115,5 +115,8 @@
         </div>
       </div>
     </section>
+    <footer>
+      <p>&copy;Copyright 2022, All right reserved by MD. ARIFUZZAMAN.</p>
+    </footer>
   </body>
 </html>
