--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </p>
         <a
           class="link-button"
-          href="https://github.com/MdArifuzzaman2/developer-arif-portfolio.git"
+          href="https://github.com/MdArifuzzaman2/developer-arif-portfolio"
           >Hire me</a
         >
       </div>
@@ -73,7 +73,7 @@
         </p>
         <a
           class="link-button1"
-          href="https://github.com/MdArifuzzaman2/developer-arif-portfolio.git"
+          href="https://github.com/MdArifuzzaman2/developer-arif-portfolio"
           target="_blank"
           >Download Resume</a
         >
