--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
         <img
           width="750"
           height="450"
-          src="photos/portfoliopic.png"
+          src="photos/a.jpg"
           alt="This is my professional picture"
         />
       </div>
     </section>
     <section class="dream-bg flexible-container">
       <div class="half1">
-        <img width="750" height="450" src="photos/port.png" alt="An image" />
+        <img width="750" height="450" src="photos/c.jpg" alt="An image" />
       </div>
       <div class="half2">
         <h1>My big dream</h1>
