everything is okay now

--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
       </div>
       <div class="half2">
         <img
-          width="750"
+          width="650"
           height="450"
-          src="photos/a.jpg"
+          src="photos/portfoliopic.png"
           alt="This is my professional picture"
         />
       </div>
     </section>
     <section class="dream-bg flexible-container">
       <div class="half1">
-        <img width="750" height="450" src="photos/c.jpg" alt="An image" />
+        <img width="650" height="450" src="photos/port.png" alt="An image" />
       </div>
       <div class="half2">
         <h1>My big dream</h1>
